[package]
name = "fd-anticounterfeit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "NFC based Anti-Counterfeit proover for Sage."
authors = ["Farmer Diamonds <support@farmer.diamonds>"]
homepage = "https://github.com/farmerdiamonds/sage"
repository = "https://github.com/farmerdiamonds/sage"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]